--- a/Detecção_e_Rastreamento_de_Fogo_em_Tempo_Real_com_YOLOv5.ipynb
+++ b/Detecção_e_Rastreamento_de_Fogo_em_Tempo_Real_com_YOLOv5.ipynb
@@ -6,9 +6,7 @@
       "provenance": [],
       "collapsed_sections": [
         "8CjFTo7a4LZs",
-        "WFRhkt1c4knU",
-        "KO8-d_HF5HoL",
-        "Q6uwlD374Omm"
+        "KO8-d_HF5HoL"
       ]
     },
     "kernelspec": {
@@ -36,6 +34,15 @@
       ],
       "metadata": {
         "id": "vtW3QiNM6NEe"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Vídeo de apresentação: https://youtu.be/joLUeVVGigA"
+      ],
+      "metadata": {
+        "id": "l_rEAFshp3f4"
       }
     },
     {
@@ -6416,7 +6423,7 @@
         "fbRange = [12000, 40000]\n",
         "\n",
         "# Carregando o modelo\n",
-        "weights = '/Volumes/SSD Victor/TUDO/yolov5-fire-detection-main/models/best.pt'\n",
+        "weights = '/Users/victoremanuel/PycharmProjects/pythonFIRE-DETECTION/Yolov5-Fire-Detection/models/best.pt'\n",
         "device = select_device('')\n",
         "model = DetectMultiBackend(weights, device=device)\n",
         "model.eval()\n",
